# hi-perf-cmp

./: .gitignore  CLAUDE.md  README.md
.superpowers/sdd/: progress.md
autobench/: CLAUDE.md  Cargo.toml  program.md
autobench/src/: lib.rs  sampling.rs  task_spec.rs  verdict.rs
autobench/tasks/: TEMPLATE.md
autobench/tasks/go-network-rtt-quic/: program.md  results.tsv
autobench/tasks/go-network-rtt-tcp/: program.md  results.tsv
autobench/tasks/go-network-rtt-udp/: program.md  results.tsv
autobench/tasks/go-thread-handoff-channel/: program.md  results.tsv
autobench/tasks/go-thread-handoff-condvar/: program.md  results.tsv
autobench/tasks/go-thread-handoff-ring/: program.md  results.tsv
autobench/tasks/go-thread-handoff-spin/: program.md  results.tsv
autobench/tasks/java-network-rtt-quic/: program.md  results.tsv
autobench/tasks/java-network-rtt-tcp/: program.md  results.tsv
autobench/tasks/java-network-rtt-udp/: program.md  results.tsv
autobench/tasks/java-thread-handoff-channel/: program.md  results.tsv
autobench/tasks/java-thread-handoff-condvar/: program.md  results.tsv
autobench/tasks/java-thread-handoff-ring/: program.md  results.tsv
autobench/tasks/java-thread-handoff-spin/: program.md  results.tsv
autobench/tasks/rust-network-rtt-quic/: program.md  results.tsv
autobench/tasks/rust-network-rtt-tcp/: program.md  results.tsv
autobench/tasks/rust-network-rtt-udp/: program.md  results.tsv
autobench/tasks/rust-thread-handoff-channel/: program.md  results.tsv
autobench/tasks/rust-thread-handoff-condvar/: program.md  results.tsv
autobench/tasks/rust-thread-handoff-disruptor/: program.md  results.tsv
autobench/tasks/rust-thread-handoff-ring/: program.md  results.tsv
autobench/tasks/rust-thread-handoff-spin/: program.md  results.tsv
bench-infra/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  aws-iam-bench-policy.json  example.tfvars
bench-infra/ansible/: ansible.cfg  bench.yml  provision.yml
bench-infra/inventory/: terraform_to_inventory.sh
bench-infra/terraform/: main.tf  outputs.tf  variables.tf
docs/: RESULTS.md  result-contract.md
go/: README.md  go.mod  go.sum
harness/: README.md
java/: README.md  build.gradle.kts  settings.gradle.kts
java/common/: build.gradle.kts
java/filesystem-write/: build.gradle.kts
java/filesystem-write-batch/: build.gradle.kts
java/filesystem-write-fdatasync/: build.gradle.kts
java/filesystem-write-fsync/: build.gradle.kts
java/filesystem-write-prealloc/: build.gradle.kts
java/network-rtt/: build.gradle.kts
java/network-rtt-quic/: build.gradle.kts
java/network-rtt-tcp/: build.gradle.kts
java/network-rtt-udp/: build.gradle.kts
java/smr-collections-common/: build.gradle.kts  (+1 more)
journal/: INDEX.md  README.md  REGRESSIONS.md  baselines.json
rust/: Cargo.toml  README.md
rust/bench-common/: Cargo.toml
rust/bench-common/src/: config.rs  fswrite.rs  handoff.rs  lib.rs  measure.rs  result.rs  serial.rs  smrcoll.rs
rust/filesystem-write/: Cargo.toml
rust/filesystem-write/batch/: Cargo.toml
rust/filesystem-write/batch/src/: main.rs
rust/filesystem-write/fdatasync/: Cargo.toml
rust/filesystem-write/fdatasync/src/: main.rs
rust/filesystem-write/fsync/: Cargo.toml
rust/filesystem-write/fsync/src/: main.rs
rust/filesystem-write/prealloc/: Cargo.toml
rust/filesystem-write/prealloc/src/: main.rs
rust/filesystem-write/src/: main.rs
rust/handoff-compare/: Cargo.toml
rust/handoff-compare/benches/: mpsc.rs  spsc.rs
rust/handoff-compare/src/: lib.rs  mpsc.rs  spsc.rs
rust/network-rtt/: Cargo.toml
rust/network-rtt/quic/: Cargo.toml
rust/network-rtt/quic/src/: main.rs  quic.rs
rust/network-rtt/src/: config.rs  main.rs  stats.rs  tcp.rs  udp.rs
rust/network-rtt/tcp/: Cargo.toml
rust/network-rtt/tcp/src/: main.rs  tcp.rs
rust/network-rtt/udp/: Cargo.toml
rust/network-rtt/udp/src/: main.rs  udp.rs
rust/rpc-roundtrip/common/: Cargo.toml
rust/rpc-roundtrip/common/src/: lib.rs
rust/rpc-roundtrip/sbe_udp/: Cargo.toml  build.rs
rust/rpc-roundtrip/sbe_udp/schema/: rpc_payload.xml
rust/rpc-roundtrip/sbe_udp/src/: lib.rs  main.rs
rust/serialization/aeron_sbe/: Cargo.toml  regen.sh
rust/serialization/aeron_sbe/schema/: journal.xml
rust/serialization/aeron_sbe/src/: lib.rs  main.rs
rust/serialization/bincode/: Cargo.toml
rust/serialization/bincode/src/: lib.rs  main.rs
rust/serialization/common/: Cargo.toml
rust/serialization/common/src/: lib.rs
rust/serialization/conformance/: Cargo.toml
rust/serialization/conformance/src/: lib.rs
rust/serialization/conformance/tests/: conformance.rs
rust/serialization/sbe_gen/: Cargo.toml  build.rs
rust/serialization/sbe_gen/schema/: journal.xml
rust/serialization/sbe_gen/src/: lib.rs  main.rs
rust/smr-collections/booksnap-sbe/: regen.sh
rust/smr-collections/common/: Cargo.toml
rust/smr-collections/common/src/: book.rs  lib.rs  rng.rs  snapshot.rs
rust/smr-collections/insert/: Cargo.toml
rust/smr-collections/insert/src/: main.rs
rust/smr-collections/schema/: book_snapshot.xml
rust/smr-collections/snapshot/: Cargo.toml
rust/smr-collections/snapshot/src/: main.rs
rust/smr-collections/update/: Cargo.toml
rust/smr-collections/update/src/: main.rs
rust/thread-handoff/: Cargo.toml
rust/thread-handoff/channel/: Cargo.toml
rust/thread-handoff/channel/src/: main.rs
rust/thread-handoff/condvar/: Cargo.toml
rust/thread-handoff/condvar/src/: main.rs
rust/thread-handoff/disruptor/: Cargo.toml
rust/thread-handoff/disruptor/src/: main.rs
rust/thread-handoff/ring/: Cargo.toml
rust/thread-handoff/ring/src/: main.rs  spsc.rs
rust/thread-handoff/spin/: Cargo.toml
rust/thread-handoff/spin/src/: main.rs
rust/thread-handoff/src/: main.rs
tools/journal/: Cargo.toml
tools/journal/src/: baseline.rs  compare.rs  index.rs  lib.rs  main.rs  model.rs  record.rs
tools/journal/tests/: integration.rs
tools/journal/tests/fixtures/baseline-run/: manifest.txt  results.jsonl
tools/journal/tests/fixtures/regressed-run/: manifest.txt  results.jsonl
(+243 files in other folders)
