[workspace]
resolver = "2"
members = [
    "network-rtt",
    "filesystem-write",
    "thread-handoff",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Peter Knego"]

# Shared dependencies inherited by member crates via `dep.workspace = true`.
# Benchmarks are std-only for now; add shared deps here as they appear.
[workspace.dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
