[workspace]
resolver = "2"
members = [
    "bench-common",
    "network-rtt/tcp",
    "network-rtt/udp",
    "network-rtt/quic",
    "filesystem-write/fsync",
    "filesystem-write/fdatasync",
    "filesystem-write/prealloc",
    "filesystem-write/batch",
    "thread-handoff/spin",
    "thread-handoff/condvar",
    "thread-handoff/channel",
    "thread-handoff/ring",
    "thread-handoff/disruptor",
    "handoff-compare",
    "serialization/common",
    "serialization/bincode",
    "serialization/sbe_gen",
    "serialization/aeron_sbe",
    "serialization/aeron_sbe/generated/journal",
    "serialization/conformance",
    "smr-collections/common",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Peter Knego"]

# Shared dependencies inherited by member crates via `dep.workspace = true`.
# Most benchmarks are std-only; the QUIC experiment crate is the only consumer
# of the quinn/rustls/rcgen/tokio stack below.
[workspace.dependencies]
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
zerocopy = { version = "0.8", features = ["derive"] }
sbe_gen = "0.7.3"
crc32c = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
