[package]
name = "journal"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Peter Knego"]
description = "CLI to record and compare curated benchmark runs (the benchmark journal)."

[[bin]]
name = "journal"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
