[package]
name = "serialization-sbe_gen"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "serialization-sbe_gen"
path = "src/main.rs"

[lib]
name = "serialization_sbe_gen"
path = "src/lib.rs"

[dependencies]
serialization-common = { path = "../common" }
bench-common = { path = "../../bench-common" }
zerocopy = { workspace = true }

[build-dependencies]
sbe_gen = { workspace = true }
